[gd_scene load_steps=15 format=3 uid="uid://sx4flyf1cs4o"]

[ext_resource type="Script" uid="uid://cc11uyrd7gfr6" path="res://Scripts/slime.gd" id="1_g53nw"]
[ext_resource type="Texture2D" uid="uid://bl53gpvg5mh1y" path="res://Assets/sprites/slime_green.png" id="1_u213d"]
[ext_resource type="Texture2D" uid="uid://bwoec51f6mei0" path="res://Assets/sprites/slime_purple.png" id="3_5r5f5"]
[ext_resource type="Script" uid="uid://ccbruasvtk1bg" path="res://Scripts/slime_area_2d.gd" id="3_ruoba"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g53nw"]
atlas = ExtResource("1_u213d")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruoba"]
atlas = ExtResource("1_u213d")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5r5f5"]
atlas = ExtResource("1_u213d")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tel6i"]
atlas = ExtResource("1_u213d")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n888t"]
atlas = ExtResource("3_5r5f5")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7gm4"]
atlas = ExtResource("3_5r5f5")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4h1a"]
atlas = ExtResource("3_5r5f5")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2td88"]
atlas = ExtResource("3_5r5f5")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_n888t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g53nw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruoba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5r5f5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tel6i")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 0.5,
"texture": SubResource("AtlasTexture_n888t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7gm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4h1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2td88")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u213d"]
size = Vector2(16, 15)

[node name="Slime" type="Node2D"]
script = ExtResource("1_g53nw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_n888t")
animation = &"die"
autoplay = "default"
frame = 3
frame_progress = 1.0

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource("3_ruoba")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_u213d")

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
position = Vector2(-7, 0)
target_position = Vector2(-5, 0)

[node name="RayCast2DRight" type="RayCast2D" parent="."]
position = Vector2(7, 0)
target_position = Vector2(5, 0)

[node name="Marker2D" type="Marker2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
